# QT_Homework

./: CMakeLists.txt  README.md  build.sh
QT_Mario/: CMakeLists.txt  build.sh  game.cpp  game.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h
QT_Mario/build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  QT_Mario  build.ninja  cmake_install.cmake  compile_commands.json
QT_Mario/build_ninja/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
QT_Mario/build_ninja/QT_Mario_autogen/: deps
QT_Mario/build_ninja/QT_Mario_autogen/EWIEGA46WW/: moc_logindialog.cpp  moc_mainwindow.cpp
build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  keyboard
build_ninja/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_ninja/keyboard_autogen/: deps  mocs_compilation.cpp
build_ninja/keyboard_autogen/UVLADIE3JM/: moc_keyboard.cpp  moc_start_dialog.cpp
src/: keyboard.cpp  keyboard.hpp  keyboard_data.cpp  keyboard_window.cpp  keyboard_window.hpp  main.cpp  start_dialog.cpp  start_dialog.hpp
